Dark mode fixes

--- a/styles/global.css
+++ b/styles/global.css
@@ -1525,7 +1525,7 @@ section p a:hover {
     margin-top: 50px;
   }
   .navbar li a {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
   .menu-toggle, .bar {
     display: block;
