--- a/styles/modules/_navbar.scss
+++ b/styles/modules/_navbar.scss
@@ -179,7 +179,7 @@
 	    }
 
         a {
-            font-size: 1rem;
+            font-size: 1.5rem;
         }
 	}
 
